teachers routes and controllers added
