# routes/teacher.js
@@ -5,6 +5,32 @@ const router = express.Router();
 
 const teacherController = require('../controllers/teacher.js');
 
+const teacherValidationRules = {
+    name: 'required|string|min:3',
+    email: 'required|email',
+    subject: 'required|string|min:2'
+};
+
+router.get('/', isAuthenticated, teacherController.getAll);
+
+router.get('/:id', isAuthenticated, teacherController.getSingle);
+
+router.post(
+    '/',
+    isAuthenticated,
+    validation.validate(teacherValidationRules),
+    teacherController.createTeacher
+);
+
+router.put(
+    '/:id',
+    isAuthenticated,
+    validation.validate(teacherValidationRules),
+    teacherController.updateTeacher
+);
+
+router.delete('/:id', isAuthenticated, teacherController.deleteTeacher);
+
 // router.get('/', );
 // router.get('/:id', );
 // router.post('/', )
